--- a/.github/style.css
+++ b/.github/style.css
@@ -1,1 +1,11 @@
-k
+ }
+   form {
+       margin: 20px auto;
+       width: 300px;
+       display: flex;
+       flex-direction: column;
+   }
+   input, button {
+       margin: 5px 0;
+       padding: 10px;
+   }
